--- a/data/stories/get_started_intro.yml
+++ b/data/stories/get_started_intro.yml
@@ -5,8 +5,7 @@ stories:
   steps:
   - intent: get_started_intro
   - action: utter_greet
-  - action: utter_ask_intro
-  - action: utter_ask_playground_or_install
+  - action: utter_ask_playground_install_info
   - intent: affirm
   - action: utter_what_help
 
@@ -14,8 +13,7 @@ stories:
   steps:
   - intent: get_started_intro
   - action: utter_greet
-  - action: utter_ask_intro
-  - action: utter_ask_playground_or_install
+  - action: utter_ask_playground_install_info
   - intent: faq
     entities:
     - product: playground
@@ -28,15 +26,8 @@ stories:
   steps:
   - intent: get_started_intro
   - action: utter_greet
-  - action: utter_ask_intro
-  - action: utter_ask_playground_or_install
+  - action: utter_ask_playground_install_info
   - intent: install_rasa
-  - action: utter_ask_which_product
-  - intent: faq
-    entities:
-    - product: rasa
-  - slot_was_set:
-    - product: rasa
   - action: utter_installation_command
   - action: utter_having_trouble_installing
   - action: utter_ask_ready_to_build
@@ -45,15 +36,8 @@ stories:
   steps:
   - intent: get_started_intro
   - action: utter_greet
-  - action: utter_ask_intro
-  - action: utter_ask_playground_or_install
+  - action: utter_ask_playground_install_info
   - intent: install_rasa
-  - action: utter_ask_which_product
-  - intent: how_to_get_started
-    entities:
-    - product: rasa
-  - slot_was_set:
-    - product: rasa
   - action: utter_installation_command
   - action: utter_having_trouble_installing
   - action: utter_ask_ready_to_build
@@ -62,11 +46,8 @@ stories:
   steps:
   - intent: get_started_intro
   - action: utter_greet
-  - action: utter_ask_intro
-  - action: utter_ask_playground_or_install
+  - action: utter_ask_playground_install_info
   - intent: install_rasa
-  - action: utter_ask_which_product
-  - intent: faq
     entities:
     - product: x
   - slot_was_set:
@@ -84,11 +65,8 @@ stories:
   steps:
   - intent: get_started_intro
   - action: utter_greet
-  - action: utter_ask_intro
-  - action: utter_ask_playground_or_install
+  - action: utter_ask_playground_install_info
   - intent: install_rasa
-  - action: utter_ask_which_product
-  - intent: how_to_get_started
     entities:
     - product: x
   - slot_was_set:
@@ -106,11 +84,8 @@ stories:
   steps:
   - intent: get_started_intro
   - action: utter_greet
-  - action: utter_ask_intro
-  - action: utter_ask_playground_or_install
+  - action: utter_ask_playground_install_info
   - intent: install_rasa
-  - action: utter_ask_which_product
-  - intent: faq
     entities:
     - product: x
   - slot_was_set:
@@ -127,8 +102,7 @@ stories:
   steps:
   - intent: get_started_intro
   - action: utter_greet
-  - action: utter_ask_intro
-  - action: utter_ask_playground_or_install
+  - action: utter_ask_playground_install_info
   - intent: deny
   - action: utter_interested_in_starter_packs
   - intent: affirm
@@ -139,8 +113,7 @@ stories:
   steps:
   - intent: get_started_intro
   - action: utter_greet
-  - action: utter_ask_intro
-  - action: utter_ask_playground_or_install
+  - action: utter_ask_playground_install_info
   - intent: deny
   - action: utter_interested_in_starter_packs
   - intent: deny
@@ -151,18 +124,15 @@ stories:
   steps:
   - intent: get_started_intro
   - action: utter_greet
-  - action: utter_ask_intro
-  - action: utter_ask_playground_or_install
+  - action: utter_ask_playground_install_info
   - intent: faq
     entities:
     - product: playground
   - slot_was_set:
     - product: playground
-  - action: utter_faq
+  - action: utter_playground_intro
   - action: action_set_faq_slot
   - intent: install_rasa
-  - action: utter_ask_which_product
-  - intent: faq
     entities:
     - product: x
   - slot_was_set:
