--- a/data/nlu/faq.yml
+++ b/data/nlu/faq.yml
@@ -1,5 +1,102 @@
 version: "2.0"
 nlu:
+- intent: faq/components
+    - what are the components of rasa
+    - What components does Rasa have?
+    - What are the two components that make up [Rasa Open Source](product)?
+    - what is a component in rasa?
+    - what is componenbts
+    - what is components
+    - the components of Rasa
+    - the components of rasa
+    - want to build a chatbot
+    - whar are the components of rasa?
+    - what [rasa_nlu](product)
+    - what about [nlu](product)?
+    - what are Rasa's components
+    - what are the components of RASA
+    - what are the components of Rasa
+    - what are the components?
+    - tell me about the components
+    - parts of rasa
+    - more info on components
+    - more info on components of rasa pls
+    - more information on components in rasa
+    - compnnent of rasa
+    - components in rasa
+    - components of Rasa?
+    - components of rasa
+    - rasa components
+    - can give tell me about components of Rosa
+    - The components of Rasa?
+    - What are Rasa's components?
+    - What are the components of Rasa?
+    - What are the components of rasa?
+    - different parts of Rasa
+    - tell me about the different parts of rasa
+    - what are your features ?
+    - what are the features does rasa have?    
+- intent: faq/dialogue_management
+  examples: |
+    - what is rasa [core](product)
+    - what is rasa [core](product)?
+    - what can i build with rasa [core](product)?
+    - what is [core](product)
+    - what's rasa [core](product)?
+    - tell me something about [core](product)
+    - rasa [core](product)
+    - rasa [core](product) quickstart
+    - [core](product)
+    - [core](product) please
+    - [Core](product)
+    - Rasa [Core](product)
+    - Rasa [core](product)
+    - I want to know more about [core](product)
+    - I want know about Rasa [Core](product)
+    - About [Core](product)
+    - i need more info for rasa [core](product)
+    - i want to learn about rasa [core](product)
+    - i would like more explanation on RASA [Core](product)
+    - tell me about Rasa [Core](product)
+    - tell me about Rasa [NLU](product)
+    - tell me about [core](product)
+    - tell me about [core](product) please
+- intent: faq/nlu
+  examples: |
+    - more about [NLU](product)
+    - more about [NLU](product) please
+    - more about [nlu](product)
+    - yes i wanna know more about rasa [nlu](product)
+    - what is this [nlu](product) thing?
+    - what's rasa [nlu](product)
+    - tell me more about [NLU](product)
+    - tell me more about rasa [nlu](product)
+    - what is [nlu](product)
+    - what is rasa [nlu](product)?
+    - tell me about [nlu](product)
+    - rasa [nlu](product)
+    - just Rasa [NLU](product)
+    - just [NLU](product)
+    - just rasa [nlu](product)
+    - i want to know about RASA [Nlu](product)
+    - i want to know more about [NLU](product)
+    - i want to learn about [nlu](product)
+    - i want to learn about rasa [nlu](product)
+    - Can you tell me more about [NLU](product)?
+    - I want to know more about [NLU](product)
+    - I would like to know more about RASA [NLU](product)
+    - More about [NLU](product)
+    - Only [NLU](product)
+    - RASA [NLU](product)
+    - Rasa [NLU](product)
+    - Yes, I want to know more about [NLU](product)
+    - [NLU](product)
+    - and rasa [nlu](product)?
+    - [nlu](product)
+    - [nlu](product) part
+    - hi, can you help in understanding NLU
+    - how about [nlu](product)
+    - give me some information on [nlu](product)
 - intent: faq/rasa_playground
   examples: |
     - what is [Rasa Playground](product) ?
@@ -234,7 +331,6 @@ nlu:
     - whats the diference
     - whats the difference between [core](product) and [nlu](product)
     - does the [open source](product) version have [core](product)?
-    - What are the two components that make up [Rasa Open Source](product)?
 - intent: faq/differencerasarasax
   examples: |
     - Are [Rasa](product) and [Rasa X](product) the same thing?
