--- a/data/stories/chitchat.yml
+++ b/data/stories/chitchat.yml
@@ -31,6 +31,8 @@ stories:
   - intent: chitchat
   - action: utter_chitchat
   - intent: how_to_get_started
+  - action: utter_ask_playground_install_info
+  - intent: install_rasa
   - action: utter_getstarted
   - action: utter_first_bot_with_rasa
   - intent: affirm
