--- a/data/stories/closetheloop.yml
+++ b/data/stories/closetheloop.yml
@@ -573,9 +573,7 @@ stories:
 - story: Story from conversation with cfa8bb9deaf0427498c662745431a282 on December 15th 2018
   steps:
   - intent: get_started_step1
-  - action: action_greet_user
-  - slot_was_set:
-    - shown_privacy: true
+  - action: utter_get_started_step1
   - intent: chitchat
   - action: utter_chitchat
   - intent: enter_data
@@ -585,8 +583,6 @@ stories:
   steps:
   - intent: get_started_step1
   - action: action_greet_user
-  - slot_was_set:
-    - shown_privacy: true
   - intent: enter_data
   - action: utter_not_sure
   - action: utter_possibilities
@@ -613,8 +609,6 @@ stories:
   steps:
   - intent: get_started_step1
   - action: action_greet_user
-  - slot_was_set:
-    - shown_privacy: true
   - intent: chitchat
   - action: utter_chitchat
   - intent: chitchat
@@ -626,8 +620,6 @@ stories:
   steps:
   - intent: get_started_step1
   - action: action_greet_user
-  - slot_was_set:
-    - shown_privacy: true
   - intent: chitchat
   - action: utter_chitchat
   - intent: chitchat
@@ -645,8 +637,6 @@ stories:
   steps:
   - intent: get_started_step1
   - action: action_greet_user
-  - slot_was_set:
-    - shown_privacy: true
   - intent: chitchat
   - action: utter_chitchat
   - intent: chitchat
@@ -667,8 +657,6 @@ stories:
   steps:
   - intent: get_started_step1
   - action: action_greet_user
-  - slot_was_set:
-    - shown_privacy: true
   - intent: greet
   - action: action_greet_user
   - intent: how_to_get_started
@@ -694,8 +682,6 @@ stories:
   steps:
   - intent: get_started_step1
   - action: action_greet_user
-  - slot_was_set:
-    - shown_privacy: true
   - intent: enter_data
   - action: utter_not_sure
   - action: utter_possibilities
@@ -726,8 +712,6 @@ stories:
   steps:
   - intent: get_started_step1
   - action: action_greet_user
-  - slot_was_set:
-    - shown_privacy: true
   - intent: greet
   - action: action_greet_user
   - intent: out_of_scope
@@ -741,8 +725,6 @@ stories:
   steps:
   - intent: get_started_step1
   - action: action_greet_user
-  - slot_was_set:
-    - shown_privacy: true
   - slot_was_set:
     - step: '1'
   - intent: affirm
@@ -772,8 +754,6 @@ stories:
   steps:
   - intent: get_started_step1
   - action: action_greet_user
-  - slot_was_set:
-    - shown_privacy: true
   - intent: chitchat
   - action: utter_chitchat
   - intent: chitchat
@@ -790,8 +770,6 @@ stories:
   steps:
   - intent: get_started_step1
   - action: action_greet_user
-  - slot_was_set:
-    - shown_privacy: true
   - slot_was_set:
     - step: '1'
   - intent: greet
@@ -819,8 +797,6 @@ stories:
   - intent: get_started_step1
   - action: action_greet_user
   - slot_was_set:
-    - shown_privacy: true
-  - slot_was_set:
     - step: '1'
   - intent: greet
   - action: action_greet_user
@@ -844,8 +820,6 @@ stories:
   steps:
   - intent: get_started_step1
   - action: action_greet_user
-  - slot_was_set:
-    - shown_privacy: true
   - slot_was_set:
     - step: '1'
   - intent: greet
@@ -880,24 +854,11 @@ stories:
     - product: core
   - action: utter_explain_core
   - action: utter_also_explain_nlu
-# - story: Story from conversation with 4a4e903fc43940db9ccdb9153dfdadcb on January 21st 2019
-#   steps:
-#   - intent: get_started_step1
-#   - action: action_greet_user
-#   - slot_was_set:
-#     - shown_privacy: true
-#   - slot_was_set:
-#     - step: '1'
-#   - intent: install_rasa
-#   - action: utter_installation_command
-#   - action: utter_having_trouble_installing
-#   - action: utter_ask_ready_to_build
+
 - story: Story from conversation with 5f3a2ea92d184a9f96df7240e4f7e2d9 on January 21st 2019
   steps:
   - intent: get_started_step1
   - action: action_greet_user
-  - slot_was_set:
-    - shown_privacy: true
   - slot_was_set:
     - step: '1'
   - intent: how_to_get_started
@@ -920,8 +881,6 @@ stories:
   steps:
   - intent: get_started_step4
   - action: action_greet_user
-  - slot_was_set:
-    - shown_privacy: true
   - intent: faq
   - action: utter_faq
   - action: action_set_faq_slot
