--- a/data/stories/book_demo.yml
+++ b/data/stories/book_demo.yml
@@ -6,7 +6,7 @@ stories:
   - action: utter_schedule_enterprise_demo
 - story: Story from Conversation ID d3e170ca24e74784acbef03e5db050ca
   steps:
-  - intent: get_started_intro
+  - intent: how_to_get_started
   - action: utter_greet
   - action: utter_ask_playground_install_info
   - intent: install_rasa
