--- a/data/stories/get_started_intro.yml
+++ b/data/stories/get_started_intro.yml
@@ -3,7 +3,7 @@ stories:
 
 - story: Getting started with Rasa playground
   steps:
-  - intent: get_started_intro
+  - intent: how_to_get_started
   - action: utter_greet
   - action: utter_ask_playground_install_info
   - intent: affirm
@@ -11,7 +11,7 @@ stories:
 
 - story: Getting started with Rasa playground
   steps:
-  - intent: get_started_intro
+  - intent: how_to_get_started
   - action: utter_greet
   - action: utter_ask_playground_install_info
   - intent: faq
@@ -24,7 +24,7 @@ stories:
 
 - story: Getting started with Rasa Open Source installation
   steps:
-  - intent: get_started_intro
+  - intent: how_to_get_started
   - action: utter_greet
   - action: utter_ask_playground_install_info
   - intent: install_rasa
@@ -34,7 +34,7 @@ stories:
 
 - story: Getting started with Rasa Open Source installation
   steps:
-  - intent: get_started_intro
+  - intent: how_to_get_started
   - action: utter_greet
   - action: utter_ask_playground_install_info
   - intent: install_rasa
@@ -44,7 +44,7 @@ stories:
 
 - story: Getting started with Rasa X local mode installation
   steps:
-  - intent: get_started_intro
+  - intent: how_to_get_started
   - action: utter_greet
   - action: utter_ask_playground_install_info
   - intent: install_rasa
@@ -63,7 +63,7 @@ stories:
 
 - story: Getting started with Rasa X local mode installation
   steps:
-  - intent: get_started_intro
+  - intent: how_to_get_started
   - action: utter_greet
   - action: utter_ask_playground_install_info
   - intent: install_rasa
@@ -82,7 +82,7 @@ stories:
 
 - story: Getting started with Rasa X server installation
   steps:
-  - intent: get_started_intro
+  - intent: how_to_get_started
   - action: utter_greet
   - action: utter_ask_playground_install_info
   - intent: install_rasa
@@ -100,7 +100,7 @@ stories:
 
 - story: Getting started with Starter Packs
   steps:
-  - intent: get_started_intro
+  - intent: how_to_get_started
   - action: utter_greet
   - action: utter_ask_playground_install_info
   - intent: deny
@@ -111,7 +111,7 @@ stories:
 
 - story: Catch-all case of getting started
   steps:
-  - intent: get_started_intro
+  - intent: how_to_get_started
   - action: utter_greet
   - action: utter_ask_playground_install_info
   - intent: deny
@@ -122,7 +122,7 @@ stories:
 
 - story: Getting started with Rasa playground
   steps:
-  - intent: get_started_intro
+  - intent: how_to_get_started
   - action: utter_greet
   - action: utter_ask_playground_install_info
   - intent: faq
