--- a/data/rules/rules.yml
+++ b/data/rules/rules.yml
@@ -54,10 +54,6 @@ rules:
   - action: action_deactivate_loop
   - active_loop: null
   - action: utter_ask_more_details
-- rule: next step prompt
-  steps:
-  - intent: next_step
-  - action: action_next_step
 - rule: anything else? - yes
   steps:
   - action: utter_anything_else
@@ -67,8 +63,8 @@ rules:
 - rule: Getting started with Rasa playground
   conversation_start: true
   steps:
-  - intent: how_to_get_started
-  - action: utter_greet
+  - intent: get_started_intro
+  - action: action_greet_user
   - action: utter_ask_playground_install_info
 
 - rule: Trigger response selector from button payload
