--- a/data/stories/how_to_get_started.yml
+++ b/data/stories/how_to_get_started.yml
@@ -595,6 +595,7 @@ stories:
 - story: not new to rasa + not interested in products
   steps:
   - intent: how_to_get_started
+  - action: utter_ask_playground_install_info
   - action: utter_getstarted
   - action: utter_first_bot_with_rasa
   - intent: deny
