--- a/domain.yml
+++ b/domain.yml
@@ -86,6 +86,8 @@ intents:
     use_entities: true
 - trigger_response_selector:
     use_entities: false
+- get_started_intro:
+    use_entities: false
 entities:
 - amount-of-money
 - company
@@ -227,7 +229,7 @@ slots:
     type: rasa.shared.core.slots.AnySlot
     initial_value: null
     auto_fill: true
-    influence_conversation: true
+    influence_conversation: False
   suggestion:
     type: rasa.shared.core.slots.AnySlot
     initial_value: null
@@ -325,15 +327,15 @@ responses:
           build a Rasa prototype entirely online. Once you've built your prototype, you can talk to
           your bot online and download your project to continue developing it locally.
   utter_ask_playground_install_info:
-  - text: Which would you like to do first?
+  - text: I'm here to help you get started with Rasa! Which would you like to do first?
     buttons:
     - payload: /playground
-      title: Try out Rasa in the online Rasa Playground
+      title: Build a Rasa bot in the online Rasa Playground
     - payload: /install_rasa
       title: Install Rasa on your own computer
     - payload: /trigger_response_selector{"retrieval_intent":"chitchat/ask_whatisrasa"}
-      title: Find out more about Rasa
-
+      title: Get more information about Rasa
+  utter_ask_playground_help:
   - text: Do you have any questions or issues you're running into with Rasa Playground?
   utter_ask_use_case:
   - text: What kind of assistant do you want to build with Rasa?
